[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu/SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 286.0
margin_top = 142.0
margin_right = 353.0
margin_bottom = 218.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 67.0
margin_bottom = 76.0

[node name="VButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 67.0
margin_bottom = 76.0

[node name="MusicBox" type="CheckBox" parent="CenterContainer/VBoxContainer/CenterContainer/VButtonContainer"]
margin_right = 67.0
margin_bottom = 24.0
pressed = true
text = "Music"

[node name="SoundBox" type="CheckBox" parent="CenterContainer/VBoxContainer/CenterContainer/VButtonContainer"]
margin_top = 28.0
margin_right = 67.0
margin_bottom = 52.0
pressed = true
text = "Sound"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VButtonContainer"]
margin_top = 56.0
margin_right = 67.0
margin_bottom = 76.0
text = "Return"

[connection signal="toggled" from="CenterContainer/VBoxContainer/CenterContainer/VButtonContainer/MusicBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/CenterContainer/VButtonContainer/SoundBox" to="." method="_on_SoundBox_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VButtonContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
